# distrap

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  activate-sdk.sh  activate-yocto-toolchain.sh  copy-progs.sh  test-toolchain.sh  yocto-toolchain.cmake
src/: application_a.cpp  application_a.hpp  application_b.cpp  application_b.hpp  core.cpp  data_record.cpp  data_record.hpp  discovery.cpp  discovery.hpp  discovery_message.cpp  discovery_message.hpp  ip_address.cpp  ip_address.hpp  shell.cpp  test.cpp  udp_discovery.cpp  udp_discovery.hpp  udp_stub.cpp  udp_stub.hpp
src/discovery/: discovery_handshake.cpp  discovery_handshake.hpp  discovery_message.cpp  discovery_message.hpp
src/toolbox/: toolbox_ip_address.cpp  toolbox_ip_address.hpp
src/transport/: transport_interface.hpp  transport_packet.cpp  transport_packet.hpp
